# jazelle_reader

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml  build_wheels.yml  manual_tests.yml
benchmarks/: bench_batching.py  bench_formats.py  bench_threading.py  utils.py
bindings/: jazelle_cython.pxd  jazelle_cython.pyx
docs/: adding-a-new-bank.md
examples/: T01_quickstart_jazelle.ipynb  T01_quickstart_jazelle.ipynb.ipynb  T02_Z_Boson_Reconstruction.ipynb
include/jazelle/: Bank.hpp  BankTraits.hpp  Family.hpp  JazelleEvent.hpp  JazelleFile.hpp  PHMTOC.hpp
include/jazelle/banks/: AllBanks.hpp  CRIDHYP.hpp  IEVENTH.hpp  MCHEAD.hpp  MCPART.hpp  MCPNT.hpp  PHBM.hpp  PHCHRG.hpp  PHCRID.hpp  PHEVCL.hpp  PHKCHRG.hpp  PHKELID.hpp  PHKLUS.hpp  PHKTRK.hpp  PHPOINT.hpp  PHPSUM.hpp  PHWIC.hpp  PHWMC.hpp  PIDVEC.hpp
python/jazelle/: __init__.py  _version.py  cli.py  config.py  converters.py  jazelle_file.py  utils.py
python/jazelle/streamers/: __init__.py  base.py  feather_streamer.py  hdf5_streamer.py  json_streamer.py  parquet_streamer.py
src/: DataBuffer.cpp  DataBuffer.hpp  JazelleFile.cpp  JazelleStream.cpp  JazelleStream.hpp  PHMTOC.cpp
src/banks/: CRIDHYP.cpp  IEVENTH.cpp  MCHEAD.cpp  MCPART.cpp  MCPNT.cpp  PHBM.cpp  PHCHRG.cpp  PHCRID.cpp  PHEVCL.cpp  PHKCHRG.cpp  PHKELID.cpp  PHKLUS.cpp  PHKTRK.cpp  PHPOINT.cpp  PHPSUM.cpp  PHWIC.cpp  PHWMC.cpp  PIDVEC.cpp
src/jazelle/: __init__.py  jazelle_cython.pxd  jazelle_cython.pyx
src/utils/: BinaryIO.hpp  LockFreeQueue.hpp  ObjectPool.hpp
tests/cpp/: test_binary_io.cpp
tests/python/: conftest.py  test_cli.py  test_core.py  test_display.py  test_streamers.py
