# pyproject.toml

[build-system]
requires = [
    "scikit-build-core>=0.7",  # The build system
    "cython>=3.0"              # Cython build dependency
]
build-backend = "scikit_build_core.build"

[project]
name = "jazelle"
version = "0.1.0"
description = "A fast reader for SLD Jazelle files."
readme = "README.md"
authors = [
    { name = "Alkaid Cheng", email = "alkaid.ccheng@gmail.com" },
]
license = { file = "LICENSE" } # Add a LICENSE file
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

# Tell scikit-build-core where the Python package lives
[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["src/jazelle"]

# Configure Cython compilation
[tool.scikit-build.cmake.define]
# Any CMake defines you might need can go here

# Tell scikit-build-core to cythonize .pyx files
[tool.cibuildwheel]
build-verbosity = 1