# pyproject.toml

[build-system]
requires = [
    "scikit-build-core>=0.7",
    "cython>=3.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "jazelle"
version = "0.1.0"
description = "A fast reader for SLD Jazelle files."
readme = "README.md"
authors = [
    { name = "Alkaid Cheng", email = "alkaid.ccheng@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["src/jazelle"]

# Automatically cythonize .pyx files
[tool.scikit-build.overrides.platform]

[tool.cibuildwheel]
build-verbosity = 1