# pyproject.toml

[build-system]
requires = [
    "scikit-build-core>=0.7",
    "cython>=3.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "jazelle"
dynamic = ["version"]
description = "A fast reader for SLD Jazelle files."
readme = "README.md"
authors = [
    { name = "Alkaid Cheng", email = "alkaid.ccheng@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["src/jazelle"]

[tool.cibuildwheel]
build-verbosity = 1

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/jazelle/_version.py" 